--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
         (h.hj.q = h.hj.q || []).push(arguments)
       };
       h._hjSettings = {
-        hjid: 0,
-        hjsv: 0
+        hjid: 'xxx',
+        hjsv: 'xxx'
       };
       a = o.getElementsByTagName('head')[0];
       r = o.createElement('script');
